<resources>
    <string name="app_name">Google Pixel Phone</string>
    <string name="content_text">Google officially announced its much-anticipated Pixel phones; the Pixel and Pixel XL, on October 4. We attended Google’s London UK event, mirroring the main one taking place in San Francisco, US, where the firm unwrapped the new Android 7.1 Nougat devices which will apparently usurp Google’s long-standing Nexus series.</string>
    <string name="content_specs_display">5.0 inches\n FHD AMOLED at 441ppi\n 2.5D Corning® Gorilla® Glass 4</string>
    <string name="content_specs_size">5.6 x 2.7 x 0.2 ~ 0.3 inches 143.8 x 69.5 x 7.3 ~ 8.5 mm</string>
    <string name="content_specs_battery">2,770 mAh battery\n Standby time (LTE): up to 19 days\nTalk time (3g/WCDMA): up to 26 hours\nInternet use time (Wi-Fi): up to 13 hours\nInternet use time (LTE): up to 13 hours\nVideo playback: up to 13 hours\nAudio playback (via headset): up to 110 hours\nFast charging: up to 7 hours of use from only 15 minutes of charging</string>
    <string name="dummy_photos">6 Photos</string>
    <string name="dummy_value">$699</string>
    <string name="stok">Stock Hanya 6 Buah</string>
    <string name="spek">Spesifikasi</string>
    <string name="layar">Display</string>
    <string name="ukuran">Size</string>
    <string name="baterai">Battery</string>
    <string name="sellby">Dijual oleh</string>
    <string name="nama">Gector</string>
    <string name="buy">Beli</string>

</resources>